--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -11,7 +11,7 @@
             </a>
             <div>
                 <a href="/edit-post/<%= post._id %>">edit</a>
-                <form action="/delete-post/<%= data._id %>?_method=DELETE" method="POST">
+                <form action="/delete-post/<%= post._id %>?_method=DELETE" method="POST">
                     <input type="submit" value="Delete">
                 </form>
             </div>
