creating new login/register pages, pages working

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,14 @@
-<h3>Sign In</h3>
+register
 
-<form action="/admin" method="POST">
+
+<!-- <h3>Register</h3>
+
+<form action="/register" method="POST">
     <label for="username"><b>username</b></label>
     <input type="text" placeholder="Enter Username" name="username">
 
     <label for="password"><b>password</b></label>
     <input type="text" placeholder="Enter Password" name="password">
 
-    <input type="submit" value="Login">
-</form>
+    <input type="submit" value="Register">
+</form> -->
