--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,16 @@
-<h3>Register</h3>
+login
 
-<form action="/register" method="POST">
+
+
+
+<!-- <h3>Sign In</h3>
+
+<form action="/admin" method="POST">
     <label for="username"><b>username</b></label>
     <input type="text" placeholder="Enter Username" name="username">
 
     <label for="password"><b>password</b></label>
     <input type="text" placeholder="Enter Password" name="password">
 
-    <input type="submit" value="Register">
-</form>
+    <input type="submit" value="Login">
+</form> -->
