--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,20 @@
-login
+<h2>login</h2>
+
+<form action="/login" method="POST">
+    <div>
+        <label for="username">username</label>
+        <input type="text" id="username" name="username" required>
+    </div>
+
+    <div>
+        <label for="password">password</label>
+        <input type="password" id="password" name="password" required>
+    </div>
+
+    <button type="submit">login</button>
+</form>
+
+<a href="/register">register</a>
 
 
 
