--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,30 @@
-register
+<h2>register</h2>
+
+<form action="/register" method="POST">
+    <div>
+        <label for="email">email</label>
+        <input type="email" id="email" name="email" required>
+    </div>
+    
+    <div>
+        <label for="username">name</label>
+        <input type="text" id="username" name="username" required>
+    </div>
+
+    <div>
+        <label for="password">password</label>
+        <input type="password" id="password" name="password" required>
+    </div>
+
+    <button type="submit">register</button>
+</form>
+
+<a href="/login">login</a>
+
+
+
+
+
 
 
 <!-- <h3>Register</h3>
