user sign in/out functions working properly, temp. nav created

--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -8,6 +8,11 @@
     <script type="text/javascript" defer src="/js/script.js"></script>
 </head>
 <body>
+    <nav>
+        <a href="/dashboard">dashboard</a>
+        <a href="/add-post">add post</a>
+        <a href="/logout">logout</a>
+    </nav>
 
     <div>
         <header>header</header>
