--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -12,7 +12,7 @@
     <div>
         <header>header</header>
         <%- body %>
-
+        <h1>here</h1>
         <footer>footer</footer>
     </div>
 </body>
