--- a/views/admin/add-post.ejs
+++ b/views/admin/add-post.ejs
@@ -1,14 +1,21 @@
-<a href="/dashboard">&larr; Back</a>
-<div class="admin-title">
-    <h2>add new post</h2>
-</div>
-
 <form action="/add-post" method="POST">
-    <label for="title"><b>title</b></label>
-    <input type="text" placeholder="post title" name="title">
+    <div>
+        <label for="title"><b>title</b></label>
+        <input type="text" placeholder="post title" name="title">  
+    </div>
 
-    <label for="body"><b>title</b></label>
-    <textarea name="body" cols="50" rows="10"></textarea>
+    <div>
+        <label for="body"><b>body:</b></label>
+        <textarea name="body" cols="50" rows="10"></textarea>
+    </div>
 
-    <input type="submit" value="add">
+    <div>
+        <label for="channel">channel:</label>
+        <select name="channel" id="channel" required>
+            <% channels.forEach(channel => { %>
+                <option value="<%= channel._id %>"></option>
+            <% }) %>
+        </select>
+    </div>
+    <button type="submit">add post</button>
 </form>
