--- a/views/admin/edit-post.ejs
+++ b/views/admin/edit-post.ejs
@@ -1,14 +1,14 @@
-<a href="/dashboard">&larr; Back</a>
+<a href="/admin/channels/<%= channel.name %>">&larr; Back</a>
 <div class="admin-title">
     <h2>view/edit post</h2>
 
-    <form action="/delete-post/<%= data._id %>?_method=DELETE" method="POST">
+    <form action="/admin/delete-post/<%= data._id %>?_method=DELETE" method="POST">
         <input type="submit" value="delete">
     </form>
 </div>
 
 
-<form action="/edit-post/<%= data._id %>?_method=PUT" method="POST">
+<form action="/admin/edit-post/<%= data._id %>?_method=PUT" method="POST">
     <label for="title"><b>title</b></label>
     <input type="text" placeholder="post title" name="title">
 
