--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -10,23 +10,23 @@
 <body>
     <nav>
         <header>header</header>
-        <a href="/dashboard">dashboard</a>
-        <a href="/add-post">add post</a>
-        <a href="/logout">logout</a>
+        <a href="/admin/dashboard">dashboard</a>
+        <a href="/admin/add-post">add post</a>
+        <a href="/admin/logout">logout</a>
     </nav>
-
+    
     <div class="container">
         <div class="sidebar">
             <h2>channels</h2>
             <ul>
-                <li><a href="/channels/Playstation">Playstation</a></li>
-                <li><a href="/channels/Xbox">Xbox</a></li>
-                <li><a href="/channels/Nintendo">Nintendo</a></li>
-                <li><a href="/channels/PC">PC</a></li>
+                <li><a href="/admin/channels/Nintendo">Nintendo</a></li>
+                <li><a href="/admin/channels/Playstation">Playstation</a></li>
+                <li><a href="/admin/channels/PC">PC</a></li>
+                <li><a href="/admin/channels/Xbox">Xbox</a></li>
             </ul>
         </div>
-        
     </div>
+    
 
     <div>
         
