--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <h2>login</h2>
 
-<form action="/login" method="POST">
+<form action="/admin/login" method="POST">
     <div>
         <label for="username">username</label>
         <input type="text" id="username" name="username" required>
