dashboard links works with rest of site

--- a/views/admin/add-post.ejs
+++ b/views/admin/add-post.ejs
@@ -11,7 +11,7 @@
         <label for="channel">Channel:</label>
         <select name="channel" id="channel" required>
             <% channels.forEach(channel => { %>
-                <option value="<%= channel._id %>"><%= channel.name %></option>
+                <option value="<%= channel.name %>"><%= channel.name %></option>
             <% }) %>
         </select>
     </div>
