posts now display the username of who created it

--- a/views/channel.ejs
+++ b/views/channel.ejs
@@ -14,6 +14,9 @@
         <p>
             <%= post.body %>
         </p>
+        <p>
+            posted by: <%= post.user ? post.user.username : 'unknown' %>
+        </p>
      </li>
     <% }) %>
 </ul>
