--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,13 +1,8 @@
 <h2>register</h2>
 
-<form action="/register" method="POST">
+<form action="/admin/register" method="POST">
     <div>
-        <label for="email">email</label>
-        <input type="email" id="email" name="email" required>
-    </div>
-    
-    <div>
-        <label for="username">name</label>
+        <label for="username">username</label>
         <input type="text" id="username" name="username" required>
     </div>
 
@@ -20,21 +15,3 @@
 </form>
 
 <a href="/login">login</a>
-
-
-
-
-
-
-
-<!-- <h3>Register</h3>
-
-<form action="/register" method="POST">
-    <label for="username"><b>username</b></label>
-    <input type="text" placeholder="Enter Username" name="username">
-
-    <label for="password"><b>password</b></label>
-    <input type="text" placeholder="Enter Password" name="password">
-
-    <input type="submit" value="Register">
-</form> -->
