--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,32 +1,15 @@
 <h2>login</h2>
-
 <form action="/admin/login" method="POST">
     <div>
         <label for="username">username</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" required></input>
     </div>
 
     <div>
         <label for="password">password</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" required></input>
     </div>
 
     <button type="submit">login</button>
 </form>
-
 <a href="/register">register</a>
-
-
-
-
-<!-- <h3>Sign In</h3>
-
-<form action="/admin" method="POST">
-    <label for="username"><b>username</b></label>
-    <input type="text" placeholder="Enter Username" name="username">
-
-    <label for="password"><b>password</b></label>
-    <input type="text" placeholder="Enter Password" name="password">
-
-    <input type="submit" value="Login">
-</form> -->
