--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= locals.title  %></title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&family=Teachers:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <script type="text/javascript" defer src="/js/script.js"></script>
 </head>
 <body>
 
-    <div>
-        <header>header</header>
+    <div class="login-page">
+        <h2 class="logo">
+            pixel
+        </h2>
+
+
         <%- body %>
-        <h1>here</h1>
-        <footer>footer</footer>
+        
+        <footer>
+            &copy; erica penaflor | 2024
+        </footer>
     </div>
 </body>
 </html>
