--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,15 @@
-<h2>register</h2>
+<h2 class="login-register">register</h2>
 
 <form action="/admin/register" method="POST">
     <div>
-        <label for="username">username</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" placeholder="username" id="username" name="username" required>
     </div>
 
     <div>
-        <label for="password">password</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" placeholder="password" id="password" name="password" required>
     </div>
 
     <button type="submit">register</button>
 </form>
 
-<a href="/login">login</a>
+<a href="/login" class="reg-log">login</a>
