--- a/views/admin/edit-post.ejs
+++ b/views/admin/edit-post.ejs
@@ -1,18 +1,16 @@
-<a href="/admin/channels/<%= channel.name %>">&larr; Back</a>
-<div class="admin-title">
-    <h2>view/edit post</h2>
-</div>
+<button class="back"><a style="text-decoration: none;" href="/admin/channels/<%= channel.name %>">&larr; Back</button></a>
+<% posts.forEach(post => { %>
+    <% if (post.user && post.user._id.toString() === user._id.toString()) { %>
+        <div class="add-post">
+            <form action="/admin/edit-post/<%= data._id %>?_method=PUT&channel=<%= channel.name %>" method="POST">
+                <input type="hidden" name="channel" value="<%= channel._id %>">
+                <div class="add-post-container">
+                    <input class="add" type="text" name="body" placeholder="add to the conversation" required>
+                    <button class="post-btn" style="margin-right: 10px;" type="submit">update   </button>
 
-
-<form action="/admin/edit-post/<%= data._id %>?_method=PUT&channel=<%= channel.name %>" method="POST">
-    <label for="title"><b>title</b></label>
-    <input type="text" placeholder="post title" name="title">
-
-    <label for="body"><b>body</b></label>
-    <textarea name="body" cols="50" rows="10"><%= data.body %></textarea>
-
-    <input type="submit" value="update">
-</form>
-<form action="/admin/delete-post/<%= data._id %>/<%= channel.name %>?_method=DELETE" method="POST">
-    <input type="submit" value="delete">
-</form>
+            <form action="/admin/delete-post/<%= post._id %>/<%= channel.name %>?_method=DELETE" method="POST">
+                <button class="fa-btn" type="submit"><i class="fa-solid fa-trash-can fa-2xl"></i></button>
+            </form>
+        </div>
+    <% } %>
+<% }) %>
