--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,6 +15,6 @@
         <input type="password" placeholder="password" id="password" name="password" required></input>
     </div>
 
-    <button type="submit">login</button>
+    <button class="sign-btn" type="submit">login</button>
 </form>
 <a href="/register" class="reg-log">register</a>
