--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,7 @@
         <input type="password" placeholder="password" id="password" name="password" required>
     </div>
 
-    <button type="submit">register</button>
+    <button class="sign-btn" type="submit">register</button>
 </form>
 
 <a href="/login" class="reg-log">login</a>
