--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body {
-    background: linear-gradient(45deg, rgb(23, 24, 89), rgb(72, 12, 168));
-    height: 100vh;
+    background-image: linear-gradient(45deg, rgb(23, 24, 89), rgb(72, 12, 168));
     font-family: 'Teachers', 'sans-serif';
+    min-height: 100vh;
 }
 
 .logo {
@@ -9,6 +9,37 @@ body {
     font-family: 'Poetsen One', 'sans-serif';
     font-size: 100px;
     margin: 20px;
+}
+
+.container-home {
+    background-color: rgba(72, 12, 168, 0.271);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    width: 70%;
+    color: white;
+    font-size: 30px;
+    height: 100%;
+    text-align: center;
+}
+
+.p-home {
+    font-size: 30px;
+}
+
+.home-link {
+    text-decoration: none;
+    font-size: 25px;
+    padding: 10px;
+}
+
+.home-link:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .login-page {
@@ -38,7 +69,7 @@ input {
     box-sizing: border-box;
 }
 
-button {
+.sign-btn {
     font-family: 'Teachers', sans-serif;
     font-size: 1rem;
     height: 45px;
@@ -73,8 +104,7 @@ footer {
     text-align: center;
     padding: 10px 0;
     color: white;
-    position: absolute;
-    bottom: 0;
+    position: relative;
 }
 
 nav {
@@ -104,3 +134,175 @@ nav {
     color: white;
 }
 
+.container {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 70px 10px 55px;
+}
+
+.wide-container {
+    width: 60%;
+}
+
+.captions {
+    margin: 10px;
+}
+
+.sidebar {
+    background-color: rgba(72, 12, 168, 0.271);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+.sidebar-li {
+    margin: 10px 0px;
+}
+
+ul {
+    list-style: none;
+    padding: 10px 20px
+}
+
+.channels {
+    color: white;
+    text-decoration: none;
+    font-size: 30px;
+    text-transform: lowercase;
+}
+
+.dash-posts {
+    background-color: rgba(72, 12, 168, 0.271);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 10px 20px;
+    margin: 0px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.dash-a {
+    color: white;
+    text-decoration: none;
+    font-size: 25px;
+}
+
+.dash-a:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.locals-title {
+    color: white;
+    font-family: 'Poetsen One', 'sans-serif';
+    font-size: 30px;
+    text-align: center;
+}
+
+.post-body {
+    margin: 5px;
+    font-size: 20px;
+}
+
+h4 {
+    margin: 5px;
+}
+
+.channel-page {
+    background-color: rgba(72, 12, 168, 0.271);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 0px;
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+.add-post {
+    background-color: rgba(72, 12, 168, 0.271);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 0px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.add-post-container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.add {
+    width: 100%;
+    height: 3rem;
+    margin-right: 0;
+    border: none;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.post-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.user-posts {
+    flex-grow: 1;
+}
+
+.post-actions {
+    display: flex;
+    gap: 10px;
+}
+
+.post-btn {
+    background-color: rgb(23, 24, 89);
+    color: white;
+    border: none;
+    border-radius: 0px 5px 5px 0px;
+    width: 70px;
+    height: 3rem;
+}
+
+.post-btn:hover {
+    background-color: rgba(161, 160, 160, 0.603);
+    cursor: pointer;
+}
+
+.fa-btn {
+    color: white;
+    text-decoration: none;
+    background: none;
+    border: none;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.fa-btn:hover {
+    background-color: rgba(161, 160, 160, 0.603);
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    transform: scale(1.05);
+}
+
+.fa-btn i {
+    pointer-events: none;
+}
+
+.back {
+    font-family: 'Teachers', sans-serif;
+    font-size: 1rem;
+    margin: 20px 0;
+    padding: 0 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: white;
+    color: rgb(23, 24, 89);
+    cursor: pointer;
+}
