--- a/views/channel.ejs
+++ b/views/channel.ejs
@@ -1,45 +1,40 @@
-<h1>
-    Posts in <%= locals.title %>
-</h1>
-<p>
-    <%= locals.description %>
-</p>
+<div class="channel-page">
+    <h1 class="locals-title">
+        <%= locals.title %>
+    </h1>
+    
+        <ul>
+            <% posts.forEach(post => { %>
+            <li class="post-item">
+                <div class="user-posts">
+                    <p class="post-body">
+                        <%= post.body %>
+                    </p>
+                    <h4>
+                        @<%= post.user ? post.user.username : 'unknown' %>
+                    </h4>
+                </div>    
+                <% if (post.user && post.user._id.toString() === user._id.toString()) { %>
+                    <div class="post-actions">
+                        <a href="/admin/edit-post/<%= post._id %>"><i class="fa-solid fa-pen-to-square fa-btn"></i></a>
+                        <form action="/admin/delete-post/<%= post._id %>/<%= channel.name %>?_method=DELETE" method="POST">
+                            <button class="fa-btn" type="submit"><i class="fa-solid fa-trash-can"></i></button>
+                        </form>
+                    </div>
+                <% } %>
+            </li>
+            <hr>
+            <% }) %>
+        </ul>   
+        
+</div>
 
-<ul>
-    <% posts.forEach(post => { %>
-     <li>
-        <h2>
-            <a href="/admin/edit-post/<%= post._id %>"><%= post.title %></a>
-        </h2>
-        <p>
-            <%= post.body %>
-        </p>
-        <p>
-            posted by: <%= post.user ? post.user.username : 'unknown' %>
-        </p>
-        <% if (post.user && post.user._id.toString() === user._id.toString()) { %>
-            <a href="/admin/edit-post/<%= post._id %>">edit</a>
-            <form action="/admin/delete-post/<%= post._id %>/<%= channel.name %>?_method=DELETE" method="POST">
-                <input type="submit" value="Delete">
-            </form>
-        <% } %>
-     </li>
-    <% }) %>
-</ul>
-
-<h2>
-    add a new post
-</h2>
-
-<form action="/admin/add-post" method="POST">
-    <input type="hidden" name="channel" value="<%= channel._id %>">
-    <div>
-        <label for="title">title:</label>
-        <input type="text" id="title" name="title" required>
-    </div>
-    <div>
-        <label for="body">body:</label>
-        <textarea name="body" id="body" required></textarea>
-    </div>
-    <button type="submit">add post</button>
-</form>
+<div class="add-post">
+    <form  action="/admin/add-post" method="POST">
+        <input type="hidden" name="channel" value="<%= channel._id %>">
+        <div class="add-post-container">
+            <input class="add" type="text" name="body" placeholder="add to the conversation" required>
+            <button class="post-btn" type="submit">post</button>
+        </div>
+    </form>
+</div>
